--- a/assets/css/edit_task.css
+++ b/assets/css/edit_task.css
@@ -18,12 +18,13 @@
     padding: 32px 24px 32px 24px;
     margin: 0 auto;
     transition: all 120ms ease-in-out;
+    max-height: calc(100% - 18%);
 }
 
 @media (max-width: 800px){
     .board-edit-task{
         overflow-y: auto;
-        height: calc(100% - 18%);
+        max-height: calc(100% - 18%);
         overflow-x: hidden;
     }    }
 
